--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.1.0",
     "react-slick": "^0.30.3",
+    "shadcn-ui": "^0.9.4",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
