--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,2 @@
 PORT = 5001
-
-URI = "mongodb://localhost:27017/store"
+URI=mongodb+srv://amitsingh2003plwl:202252305@cluster0.fuqkppv.mongodb.net/store
